--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -51,5 +51,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "Keith Final Project GD50.sln"
+    "dotnet.defaultSolution": "keith-gd50.sln"
 }
