This should remove the CharacterBrackeys folder to my .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -75,7 +75,9 @@ crashlytics-build.properties
 /[Aa]ssets/[Cc]artoon [Hh]eroes/
 
 # "Male" folder from the "CharacterBrackeys" folder from the Assets folder
-/[Aa]ssets/[Cc]haracter[Bb]rackeys/[Mm]ale/
+/[Aa]ssets/[Cc]haractersBrackeys
+/Assets/CharactersBrackeys/
 
 # "MediumMechStriker" Folder from the Assets folder
 /[Aa]ssets/[Mm]edium[Mm]ech[Ss]triker/
+
